--- a/list_of_music.html
+++ b/list_of_music.html
@@ -130,6 +130,7 @@ AANICKFAN
 <li><a href="118.html">Copyright<a></li>
 <li><a href="119.html">Faraday's Descent<a></li>
 <li><a href="120.html">phusikḗ epistḗmē<a></li>
+<li><a href="121.html">Fendas Fails Physics<a></li>
 </ol>
 
 </body>
