--- a/double_dagger.html
+++ b/double_dagger.html
@@ -16,9 +16,13 @@ AANICKFAN
 
 <h2>Double Dagger</h2>
 
-
-
 <a href="images/double_dagger.png" target="_blank"><img src="images/double_dagger.png" width="150px" height="150px"></img></a>
+<br>
+Length: 51:10
+<br>
+Released: 2018-04-27
+<br>
+Tracks: 17
 
 <br><br>
 
@@ -53,6 +57,8 @@ AANICKFAN
 <a href="119.html">15 Faraday's Descent</a><br><audio controls><source src="music/119.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 <a href="120.html">16 phusikḗ epistḗmē</a><br><audio controls><source src="music/120.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="121.html">17 Fendas Fails Physics</a><br><audio controls><source src="music/121.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
