--- a/music.html
+++ b/music.html
@@ -11,14 +11,15 @@ AANICKFAN
 
 <h2>Collections</h2>
 
-<ul>
+<ol>
 <li><a href="famitracker_45.html">FamiTracker 45</a></li>
 <li><a href="anvil.html">Anvil</a></li>
 <li><a href="hello_new.html">Hello New</a></li>
 <li><a href="hello_new_2.html">Hello New 2</a></li>
 <li><a href="blanka_fungdomo.html">Blanka fungdomo</a></li>
 <li><a href="double_dagger.html">Double Dagger</a></li>
-</ul>
+<li><a href="dagger.html">Dagger</a></li>
+</ol>
 
 <a href="list_of_music.html"><h2>List of music</h2></a>
 
