--- a/list_of_music.html
+++ b/list_of_music.html
@@ -133,6 +133,7 @@ AANICKFAN
 <li><a href="121.html">Fendas Fails Physics<a></li>
 <li><a href="122.html">Dagger<a></li>
 <li><a href="123.html">81ap<a></li>
+<li><a href="124.html">Excellent Orbit<a></li>
 </ol>
 
 </body>
