--- a/list_of_music.html
+++ b/list_of_music.html
@@ -134,6 +134,7 @@ AANICKFAN
 <li><a href="122.html">Dagger<a></li>
 <li><a href="123.html">81ap<a></li>
 <li><a href="124.html">Excellent Orbit<a></li>
+<li><a href="125.html">Contact number on slip.<a></li>
 </ol>
 
 </body>
