--- a/list_of_music.html
+++ b/list_of_music.html
@@ -135,6 +135,7 @@ AANICKFAN
 <li><a href="123.html">81ap<a></li>
 <li><a href="124.html">Excellent Orbit<a></li>
 <li><a href="125.html">Contact number on slip.<a></li>
+<li><a href="126.html">Wikiped<a></li>
 </ol>
 
 </body>
