--- a/list_of_music.html
+++ b/list_of_music.html
@@ -136,6 +136,7 @@ AANICKFAN
 <li><a href="124.html">Excellent Orbit<a></li>
 <li><a href="125.html">Contact number on slip.<a></li>
 <li><a href="126.html">Wikiped<a></li>
+<li><a href="127.html">Delfino Plaza I<a></li>
 </ol>
 
 </body>
