--- a/dagger.html
+++ b/dagger.html
@@ -30,5 +30,7 @@ AANICKFAN
 
 <a href="126.html">5 Wikiped</a><br><audio controls><source src="music/126.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="127.html">6 Delfino Plaza I</a><br><audio controls><source src="music/127.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
