--- a/list_of_music.html
+++ b/list_of_music.html
@@ -137,6 +137,7 @@ AANICKFAN
 <li><a href="125.html">Contact number on slip.<a></li>
 <li><a href="126.html">Wikiped<a></li>
 <li><a href="127.html">Delfino Plaza I<a></li>
+<li><a href="128.html">Delfino Plaza II<a></li>
 </ol>
 
 </body>
