--- a/dagger.html
+++ b/dagger.html
@@ -34,5 +34,7 @@ AANICKFAN
 
 <a href="128.html">7 Delfino Plaza II</a><br><audio controls><source src="music/128.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="129.html">8 Shine Sprite</a><br><audio controls><source src="music/129.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
