--- a/list_of_music.html
+++ b/list_of_music.html
@@ -139,6 +139,7 @@ AANICKFAN
 <li><a href="127.html">Delfino Plaza I<a></li>
 <li><a href="128.html">Delfino Plaza II<a></li>
 <li><a href="129.html">Shine Sprite<a></li>
+<li><a href="130.html">Who Shot What<a></li>
 </ol>
 
 </body>
