--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ AANICKFAN
 <li><a href="coat_of_arms.html">Coat of arms</a></li>
 <li><a href="flags.html">Flags</a></li>
 <li><a href="games.html">Games</a></li>
+<li><a href="list_of_my_lete_plays.html">List of my Let'e Plays</a></li>
 <li><a href="music.html">Music</a></li>
 <li><a href="webcomic.html">Webcomic</a></li>
 <li><a href="https://www.youtube.com/channel/UCBKG90nDQcBcao7w8K5FuXA" target="_blank">YouTube channel<img src="images/external.png"></img></a></li>
