--- a/list_of_music.html
+++ b/list_of_music.html
@@ -140,6 +140,7 @@ AANICKFAN
 <li><a href="128.html">Delfino Plaza II<a></li>
 <li><a href="129.html">Shine Sprite<a></li>
 <li><a href="130.html">Who Shot What<a></li>
+<li><a href="131.html">Nonlinear<a></li>
 </ol>
 
 </body>
