--- a/list_of_music.html
+++ b/list_of_music.html
@@ -141,6 +141,7 @@ AANICKFAN
 <li><a href="129.html">Shine Sprite<a></li>
 <li><a href="130.html">Who Shot What<a></li>
 <li><a href="131.html">Nonlinear<a></li>
+<li><a href="132.html">Heterochromia iridum<a></li>
 </ol>
 
 </body>
