--- a/dagger.html
+++ b/dagger.html
@@ -18,6 +18,13 @@ AANICKFAN
 
 <a href="images/dagger.png" target="_blank"><img src="images/dagger.png" width="150px" height="150px"></img></a>
 
+<br>
+Length: 46:16
+<br>
+Released: 2018-04-27
+<br>
+Tracks: 17
+
 <br><br>
 
 <a href="122.html">1 Descend</a><br><audio controls><source src="music/122.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
@@ -41,6 +48,8 @@ AANICKFAN
 <a href="131.html">10 Nonlinear</a><br><audio controls><source src="music/131.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 <a href="132.html">11 Heterochromia iridum</a><br><audio controls><source src="music/132.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="133.html">12 Heterochromia iridis</a><br><audio controls><source src="music/133.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
