--- a/133.html
+++ b/133.html
@@ -24,7 +24,7 @@ Released: 2019-07-20
 
 <br>
 
-<audio controls><source src="music/133.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<audio controls><source src="music/133.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
