--- a/list_of_music.html
+++ b/list_of_music.html
@@ -143,6 +143,7 @@ AANICKFAN
 <li><a href="131.html">Nonlinear<a></li>
 <li><a href="132.html">Heterochromia iridum<a></li>
 <li><a href="133.html">Heterochromia iridis<a></li>
+<li><a href="134.html">Lesser Wheat<a></li>
 </ol>
 
 </body>
