--- a/134.html
+++ b/134.html
@@ -12,7 +12,7 @@ AANICKFAN
 
 <h2>Lesser Wheat</h2>
 
-<a href="images/dagger.png" target="_blank"><img src="images/dagger.png" width="150px" height="150px"></img></a>
+<a href="images/triple_dagger.png" target="_blank"><img src="images/triple_dagger.png" width="150px" height="150px"></img></a>
 
 <br>
 
