--- a/music.html
+++ b/music.html
@@ -19,6 +19,7 @@ AANICKFAN
 <li><a href="blanka_fungdomo.html">Blanka fungdomo</a></li>
 <li><a href="double_dagger.html">Double Dagger</a></li>
 <li><a href="dagger.html">Dagger</a></li>
+<li><a href="triple_dagger.html">Triple Dagger</a></li>
 </ol>
 
 <a href="list_of_music.html"><h2>List of music</h2></a>
