--- a/triple_dagger.html
+++ b/triple_dagger.html
@@ -16,7 +16,7 @@ AANICKFAN
 
 <h2>Triple Dagger</h2>
 
-<a href="images/triple_dagger.png" target="_blank"><img src="images/dagger.png" width="150px" height="150px"></img></a>
+<a href="images/triple_dagger.png" target="_blank"><img src="images/triple_dagger.png" width="150px" height="150px"></img></a>
 
 <br><br>
 
