--- a/list_of_music.html
+++ b/list_of_music.html
@@ -145,6 +145,7 @@ AANICKFAN
 <li><a href="133.html">Heterochromia iridis<a></li>
 <li><a href="134.html">Lesser Wheat<a></li>
 <li><a href="135.html">Wheat<a></li>
+<li><a href="136.html">The Liberator in the Rye<a></li>
 </ol>
 
 </body>
