--- a/triple_dagger.html
+++ b/triple_dagger.html
@@ -24,5 +24,7 @@ AANICKFAN
 
 <a href="135.html">2 Wheat</a><br><audio controls><source src="music/135.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
+<a href="136.html">3 The Liberator in the Rye</a><br><audio controls><source src="music/136.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
