super mario hammer and story of girl
super mario hammer and story of girl

--- a/games.html
+++ b/games.html
@@ -16,5 +16,30 @@ p:hover{
 <hr>
 <h3>2018-04-28</h3><a href="games/hypno.exe">Berry Forest</a>
 <hr>
+<h3>2019-05-18</h3><a href="games/Super Mario Hammer.zip">Super Mario Hammer</a>
+<p>I bring to you Super Mario Hammer, with 8 worlds with 4 levels each.
+<br>I didn't consider the other characters, but I suppose you could play it with characters other than Mario if you want to.
+<br>Going back to the first level in a world if you get a game over is optional; if you want to play like that, I have sprinkled in a decent amount of coins and 1-ups in the levels.
+<br>Also, for you Koopas the Quick and Il Piantissimos out there, here's a fun challenge: my speed run record is <i>23:23.23</i>.
+</p>
+<details>
+<summary>Screenshots</summary>
+<img src="images/super_mario_hammer_screenshot_1.png"></img>
+<br>
+<img src="images/super_mario_hammer_screenshot_2.png"></img>
+</details>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/H3Wm5XFitoo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<hr>
+<h3>2019-06-07</h3><a href="games/Story of Girl.exe">Story of Girl</a><p>So I was watching 8-bit music theory's video "Music Theory Minute #3.1 - The '2 Chord Trick'" in 
+which he used pieces of music from The Legend of Zelda as examples. 
+However, he changed the names of the pieces of music, thesaurusizingly. <i>Diricos</i> commented on the video 
+"Ah yes, the Tune of Tempests - one of my favorite themes from Story of Girl!"
+<br>
+So I made Story of Girl a real thing. Here it is
+<br>
+Use arrow keys and 'Z' key.
+</p>
+<hr>
 </body>
 </html>
