--- a/blogg.html
+++ b/blogg.html
@@ -10,6 +10,11 @@ AANICKFAN
 <h1><a href="index.html" style="text-decoration:none;color:black;
 ">AANickFan's Domain</a>: Blogg</h1>
 
+<h2><a href="blogg/2019-08-19.html">2019-08-19</a></h2>
+<img src="blogg/pythagoras_quest_1.JPG"></img>
+<img src="blogg/pythagoras_quest_2.JPG"></img>
+<img src="blogg/pythagoras_quest_3.JPG"></img>
+
 <h2><a href="blogg/2018-12-22.html">2018-12-22</a></h2>
 <p>iawidoawdimawdim a sm,xzm,czmx,czmxc ,mzxcmzxncnzmxcnzc oioiAJIWDIAWDIOAW DNMWADOMIAWIOD AWIMDKASNCKALQOQOQPQPQPQPPQPPQQPpQPQ PQPQPQQPPQQQQQQQQQQQQQQQQQQQQQQQQQ</p>
 
